--- a/ultralytics/cfg/models/v8/Yolo_dual_ema_conv.yaml
+++ b/ultralytics/cfg/models/v8/Yolo_dual_ema_conv.yaml
@@ -53,48 +53,25 @@ backbone:
 #   # Detection
 #   - [[25, 28, 31], 1, Detect, [nc]]  # Pass P3, P4, P5 to Detect head (index 32)
 
-# head:
-# # Top-Down Pathway
-#   - [19, 1, nn.Upsample, [None, 2, "nearest"]]  # Upsample EMA3 to match Scale 2 (index 20)
-#   - [[-1, 17], 1, Concat, [1]]                 # Concatenate EMA3 (upsampled) + EMA2 (index 21)
-#   - [-1, 1, C3k2, [512, False]]                # Apply C3k2 on concatenated features (index 22)
-
-#   - [22, 1, nn.Upsample, [None, 2, "nearest"]]  # Upsample to match Scale 1 (index 23)
-#   - [[-1, 15], 1, Concat, [1]]                 # Concatenate with EMA1 (index 24)
-#   - [-1, 1, C3k2, [256, False]]                # Apply C3k2 on concatenated features (index 25)
-
-#   # Bottom-Up Pathway
-#   - [25, 1, DWConv, [256, 256, 3, 2]]    # Downsample Scale 1 (index 26)
-#   - [[-1, 22], 1, Concat, [1]]    # Concatenate (Scale 1 -> Scale 2) (index 27)
-#   - [-1, 1, C3k2, [512, False]]   # Apply C3k2 (index 28)
-
-#   - [28, 1, DWConv, [512, 512, 3, 2]]    # Downsample Scale 2 (index 29)
-#   - [[-1, 19], 1, Concat, [1]]    # Concatenate with EMA3 (Scale 3) (index 30)
-#   - [-1, 1, C3k2, [1024, False]]  # Apply C3k2 (index 31)
-
-#   # Detection
-#   - [[25, 28, 31], 1, Detect, [nc]]  # Pass P3, P4, P5 to Detect head (index 32)
-
-
-
 head:
 # Top-Down Pathway
   - [19, 1, nn.Upsample, [None, 2, "nearest"]]  # Upsample EMA3 to match Scale 2 (index 20)
   - [[-1, 17], 1, Concat, [1]]                 # Concatenate EMA3 (upsampled) + EMA2 (index 21)
-  - [-1, 1, C3k2, [2304, 512, 1, False]]                # Apply C3k2 on concatenated features (index 22)
+  - [-1, 1, C3k2, [512, False]]                # Apply C3k2 on concatenated features (index 22)
 
   - [22, 1, nn.Upsample, [None, 2, "nearest"]]  # Upsample to match Scale 1 (index 23)
   - [[-1, 15], 1, Concat, [1]]                 # Concatenate with EMA1 (index 24)
-  - [-1, 1, C3k2, [896, 256, 1, False]]                # Apply C3k2 on concatenated features (index 25)
+  - [-1, 1, C3k2, [256, False]]                # Apply C3k2 on concatenated features (index 25)
 
   # Bottom-Up Pathway
-  - [25, 1, DWConv, [256, 3, 2]]    # Downsample Scale 1 (index 26)
+  - [25, 1, Conv, [256, 3, 2]]    # Downsample Scale 1 (index 26)
   - [[-1, 22], 1, Concat, [1]]    # Concatenate (Scale 1 -> Scale 2) (index 27)
-  - [-1, 1, C3k2, [768, 512, 1, False]]   # Apply C3k2 (index 28)
+  - [-1, 1, C3k2, [512, False]]   # Apply C3k2 (index 28)
 
-  - [28, 1, DWConv, [512, 3, 2]]    # Downsample Scale 2 (index 29)
+  - [28, 1, Conv, [512, 3, 2]]    # Downsample Scale 2 (index 29)
   - [[-1, 19], 1, Concat, [1]]    # Concatenate with EMA3 (Scale 3) (index 30)
-  - [-1, 1, C3k2, [2048, 1024, 1, False]]  # Apply C3k2 (index 31)
+  - [-1, 1, C3k2, [1024, False]]  # Apply C3k2 (index 31)
 
   # Detection
   - [[25, 28, 31], 1, Detect, [nc]]  # Pass P3, P4, P5 to Detect head (index 32)
+
