--- a/ultralytics/cfg/models/v8/test1_rtdetr.yaml
+++ b/ultralytics/cfg/models/v8/test1_rtdetr.yaml
@@ -22,18 +22,34 @@ backbone:
   #concat
   - [[2, 7], 1, Concat, [1]] # 12 concat scale 1
   - [-1, 1, EMA, [384]] # 13 ((192 + 192 = 384} (80, 80)
-  - [-1, 1, DepthwiseConvBlock, [256, 3, 1]] #14 (1, 256, 80, 80)
+  - [-1, 1, DepthwiseConvBlock, [6, 3, 1]] #14 (1, 256, 80, 80) C
   
   - [[3, 9], 1, Concat, [1]] # 15 concat scale 1
   - [-1, 1, EMA, [768]] # 16 ((384 + 384 = 768} (40, 40)
-  - [-1, 1, DepthwiseConvBlock, [256, 3, 1]] #17 (1, 256, 40, 40)
+  - [-1, 1, DepthwiseConvBlock, [256, 3, 1]] #17 (1, 256, 40, 40) B
   
   - [[4, 11], 1, Concat, [1]] # 18 concat scale 1
   - [-1, 1, EMA, [1536]] # 19 ((768 + 768 = 1536} (20, 20)
-  - [-1, 1, DepthwiseConvBlock, [256, 3, 1]] # 20 (1, 256, 20, 20)
+  - [-1, 1, DepthwiseConvBlock, [256, 3, 1]] # 20 (1, 256, 20, 20) A
 
 head:
-  - [[14, 17, 20], 1, RTDETRDecoder, [nc]]  # Pass P3, P4, P5 to Detect head (index 32) 25
+  - [-1, nn.Upsample, [None, 2, "nearest"]] #21
+  - [[17, -1], 1, BiFPN_Concat2, [1]] #22 AB
+  - [-1, 1, DepthwiseConvBlock, [256, 3, 1]] #23
+
+  - [-1, nn.Upsample, [None, 2, "nearest"]] #24
+  - [[14, -1], 1, BiFPN_Concat2, [1]] #25 ABC
+  - [-1, 1, DepthwiseConvBlock, [256, 3, 1]] #26
+
+  - [-1, DWConv, [256, 3, 2]] #27
+  - [[26, 22, 17],1, BiFPN_Concat3, [1]] #28 ABC + AB + B
+  - [-1, 1, DepthwiseConvBlock, [256, 3, 1]] #29
+
+  -[-1, DWConv, [256, 3, 2]] #30
+  -[[28, 20], 1, BiFPN_Concat2, [1]] #31 ABC + AB + B + A
+  -[-1, 1, DepthwiseConvBlock, [256, 3, 1]] #32
+
+  - [[26,29,32], 1, RTDETRDecoder, [nc]]  # Pass P3, P4, P5 to Detect head (index 32) 25
   
 
 # head:
