--- a/ultralytics/cfg/models/v8/test1_rtdetr.yaml
+++ b/ultralytics/cfg/models/v8/test1_rtdetr.yaml
@@ -33,39 +33,40 @@ backbone:
   - [-1, 1, DepthwiseConvBlock, [256, 3, 1]] # 20 (1, 256, 20, 20) A
 
 head:
-  - [-1, 1, nn.Upsample, [None, 2, "nearest"]] #21
-  - [[17, -1], 1, BiFPN_Concat2, [1]] #22 AB
-  - [-1, 1, DepthwiseConvBlock, [256, 3, 1]] #23
+  - [[14,17,20], 1, RTDETRDecoder, [nc]]  # 21
+  # - [-1, 1, nn.Upsample, [None, 2, "nearest"]] #21
+  # - [[17, -1], 1, BiFPN_Concat2, [1]] #22 AB
+  # - [-1, 1, DepthwiseConvBlock, [256, 3, 1]] #23
 
-  - [-1, 1, nn.Upsample, [None, 2, "nearest"]] #24
-  - [[14, -1], 1, BiFPN_Concat2, [1]] #25 ABC = R
-  - [-1, 1, DepthwiseConvBlock, [256, 3, 1]] #26
+  # - [-1, 1, nn.Upsample, [None, 2, "nearest"]] #24
+  # - [[14, -1], 1, BiFPN_Concat2, [1]] #25 ABC = R
+  # - [-1, 1, DepthwiseConvBlock, [256, 3, 1]] #26
 
-  - [-1, 1, DWConv, [256, 3, 2]] #27
-  - [[26, 22, 17],1, BiFPN_Concat3, [1]] #28 ABC + AB + B = Q
-  - [-1, 1, DepthwiseConvBlock, [256, 3, 1]] #29
+  # - [-1, 1, DWConv, [256, 3, 2]] #27
+  # - [[26, 22, 17],1, BiFPN_Concat3, [1]] #28 ABC + AB + B = Q
+  # - [-1, 1, DepthwiseConvBlock, [256, 3, 1]] #29
 
-  - [-1, 1, DWConv, [256, 3, 2]] #30
-  - [[28, 20], 1, BiFPN_Concat2, [1]] #31 ABC + AB + B + A = P
-  - [-1, 1, DepthwiseConvBlock, [256, 3, 1]] #32
+  # - [-1, 1, DWConv, [256, 3, 2]] #30
+  # - [[28, 20], 1, BiFPN_Concat2, [1]] #31 ABC + AB + B + A = P
+  # - [-1, 1, DepthwiseConvBlock, [256, 3, 1]] #32
 
-  - [-1, 1, nn.Upsample, [None, 2, "nearest"]] #33
-  - [[-1, 28], 1, BiFPN_Concat2, [1]] #34 PQ
-  - [-1, 1, DepthwiseConvBlock, [256, 3, 1]] #35
+  # - [-1, 1, nn.Upsample, [None, 2, "nearest"]] #33
+  # - [[-1, 28], 1, BiFPN_Concat2, [1]] #34 PQ
+  # - [-1, 1, DepthwiseConvBlock, [256, 3, 1]] #35
 
-  - [-1, 1, nn.Upsample, [None, 2, "nearest"]] #36
-  - [[34, 25], 1, BiFPN_Concat2, [1]] #37 PQR
-  - [-1, 1, DepthwiseConvBlock, [256, 3, 1]] #38
+  # - [-1, 1, nn.Upsample, [None, 2, "nearest"]] #36
+  # - [[34, 25], 1, BiFPN_Concat2, [1]] #37 PQR
+  # - [-1, 1, DepthwiseConvBlock, [256, 3, 1]] #38
 
-  - [-1, 1, DWConv, [256, 3, 2]] #39
-  - [[37, 34, 28], 1, BiFPN_Concat3, [1]] #40 PQR + PQ + Q
-  - [-1, 1, DepthwiseConvBlock, [256, 3, 1]] #41
+  # - [-1, 1, DWConv, [256, 3, 2]] #39
+  # - [[37, 34, 28], 1, BiFPN_Concat3, [1]] #40 PQR + PQ + Q
+  # - [-1, 1, DepthwiseConvBlock, [256, 3, 1]] #41
 
-  - [-1, 1, DWConv, [256, 3, 2]] #42
-  - [[40, 31], 1, BiFPN_Concat2, [1]] #43 PQR = PQ + Q + P
-  - [-1, 1, DepthwiseConvBlock, [256, 3, 1]] #44
+  # - [-1, 1, DWConv, [256, 3, 2]] #42
+  # - [[40, 31], 1, BiFPN_Concat2, [1]] #43 PQR = PQ + Q + P
+  # - [-1, 1, DepthwiseConvBlock, [256, 3, 1]] #44
 
-  - [[38,41,44], 1, RTDETRDecoder, [nc]]  # Pass P3, P4, P5 to Detect head (index 32) 25
+  # - [[38,41,44], 1, RTDETRDecoder, [nc]]  # Pass P3, P4, P5 to Detect head (index 32) 25
   
 
 # head:
