--- a/ultralytics/cfg/models/v8/test1_rtdetr.yaml
+++ b/ultralytics/cfg/models/v8/test1_rtdetr.yaml
@@ -6,41 +6,42 @@ backbone:
 
   #CNN
   - [0, 1, TorchVision, [768, "convnext_tiny", "DEFAULT", True, 2, True]]  # - 1
-  - [-1, 1, Index, [192, 4]]  # extracts 4th output (1, 192, 80, 80) - 2
-  - [1, 1, Index, [384, 6]]  # extracts 6th output (1, 384, 40, 40) - 3
-  - [1, 1, Index, [768, 8]]  # extracts 8th output (1, 768, 20, 20) - 4
+  - [-1, 1, Index, [192, 4]]  #  (1, 192, 80, 80) - 2
+  - [1, 1, Index, [384, 6]]  # (1, 384, 40, 40) - 3
+  - [1, 1, Index, [768, 8]]  #  (1, 768, 20, 20) - 4
   
   # Swin track
   - [0, 1, TorchVision, [768, swin_t, DEFAULT, True, 4, True]] #5
   - [-1, 1, Index, [192 ,4]] #6
-  - [-1, 1, torchvision.ops.Permute, [[0, 3, 1, 2]]] #7
+  - [-1, 1, torchvision.ops.Permute, [[0, 3, 1, 2]]] #7 (1, 192, 80, 80)
   - [5, 1, Index, [384, 6]] #8
-  - [-1, 1, torchvision.ops.Permute, [[0, 3, 1, 2]]] #9
+  - [-1, 1, torchvision.ops.Permute, [[0, 3, 1, 2]]] #9 (1, 384, 40, 40)
   - [5, 1, Index, [768, 9]] #10
-  - [-1, 1, torchvision.ops.Permute, [[0, 3, 1, 2]]] #11
+  - [-1, 1, torchvision.ops.Permute, [[0, 3, 1, 2]]] #11 (1, 768, 20, 20)
 
   #concat
-  - [[2, 7], 1, Concat, [1]] # 12 concat scale 1
-  - [-1, 1, EMA, [384]] # 13 ((192 + 192 = 384} (80, 80)
+  - [[2, 7], 1, Concat, [1]] # 12 (1, 384, 80, 80)
+  - [-1, 1, EMA, [384]] # 13 (1, 384, 80, 80)
   - [-1, 1, DepthwiseConvBlock, [256, 3, 1]] #14 (1, 256, 80, 80) C
   
-  - [[3, 9], 1, Concat, [1]] # 15 concat scale 1
-  - [-1, 1, EMA, [768]] # 16 ((384 + 384 = 768} (40, 40)
+  - [[3, 9], 1, Concat, [1]] # 15 (1, 768, 40, 40)
+  - [-1, 1, EMA, [768]] # 16 (1, 768, 40, 40)
   - [-1, 1, DepthwiseConvBlock, [256, 3, 1]] #17 (1, 256, 40, 40) B
   
-  - [[4, 11], 1, Concat, [1]] # 18 concat scale 1
-  - [-1, 1, EMA, [1536]] # 19 ((768 + 768 = 1536} (20, 20)
+  - [[4, 11], 1, Concat, [1]] # 18 (1, 1536, 20, 20)
+  - [-1, 1, EMA, [1536]] # 19 (1, 1536, 20, 20)
   - [-1, 1, DepthwiseConvBlock, [256, 3, 1]] # 20 (1, 256, 20, 20) A
 
 head:
-  - [[14,17,20], 1, RTDETRDecoder, [nc]]  # 21
-  # - [-1, 1, nn.Upsample, [None, 2, "nearest"]] #21
-  # - [[17, -1], 1, BiFPN_Concat2, [1]] #22 AB
-  # - [-1, 1, DepthwiseConvBlock, [256, 3, 1]] #23
+  - [-1, 1, nn.Upsample, [None, 2, "nearest"]] #21 Upsample A -> (1, 256, 40, 40)
+  - [[17, -1], 1, BiFPN_Concat2, [1]] #22 AB (1, 256, 40, 40)
+  - [-1, 1, DepthwiseConvBlock, [256, 3, 1]] #23 (1, 256, 40, 40)
 
-  # - [-1, 1, nn.Upsample, [None, 2, "nearest"]] #24
-  # - [[14, -1], 1, BiFPN_Concat2, [1]] #25 ABC = R
-  # - [-1, 1, DepthwiseConvBlock, [256, 3, 1]] #26
+  - [-1, 1, nn.Upsample, [None, 2, "nearest"]] #24 Upsample -> (1, 256, 80, 80)
+  - [[14, -1], 1, BiFPN_Concat2, [1]] #25 ABC = R (1, 256, 80, 80)
+  - [-1, 1, DepthwiseConvBlock, [256, 3, 1]] #26 (1, 256, 80, 80)
+
+  - [[20, 23, 26], 1, RTDETRDecoder, [nc]]  # 21
 
   # - [-1, 1, DWConv, [256, 3, 2]] #27
   # - [[26, 22, 17],1, BiFPN_Concat3, [1]] #28 ABC + AB + B = Q
