--- a/ultralytics/cfg/models/v8/test1_rtdetr.yaml
+++ b/ultralytics/cfg/models/v8/test1_rtdetr.yaml
@@ -41,15 +41,15 @@ head:
   - [[14, -1], 1, BiFPN_Concat2, [1]] #25 ABC = R (1, 256, 80, 80)
   - [-1, 1, DepthwiseConvBlock, [256, 3, 1]] #26 (1, 256, 80, 80)
 
-  - [[20, 23, 26], 1, RTDETRDecoder, [nc]]  # 21
+  - [-1, 1, DWConv, [256, 3, 2]] #27 (1, 256, 40, 40)
+  - [[17, 22, -1],1, BiFPN_Concat3, [1]] #28 ABC + AB + B = Q (1, 256, 40, 40)
+  - [-1, 1, DepthwiseConvBlock, [256, 3, 1]] #29 (1, 256, 40, 40)
 
-  # - [-1, 1, DWConv, [256, 3, 2]] #27
-  # - [[26, 22, 17],1, BiFPN_Concat3, [1]] #28 ABC + AB + B = Q
-  # - [-1, 1, DepthwiseConvBlock, [256, 3, 1]] #29
+  - [-1, 1, DWConv, [256, 3, 2]] #30 (1, 256, 20, 20)
+  - [[-1, 20], 1, BiFPN_Concat2, [1]] #31 ABC + AB + B + A = P
+  - [-1, 1, DepthwiseConvBlock, [256, 3, 1]] #32
 
-  # - [-1, 1, DWConv, [256, 3, 2]] #30
-  # - [[28, 20], 1, BiFPN_Concat2, [1]] #31 ABC + AB + B + A = P
-  # - [-1, 1, DepthwiseConvBlock, [256, 3, 1]] #32
+  - [[26, 29, 32], 1, RTDETRDecoder, [nc]]  # 21
 
   # - [-1, 1, nn.Upsample, [None, 2, "nearest"]] #33
   # - [[-1, 28], 1, BiFPN_Concat2, [1]] #34 PQ
