--- a/ultralytics/cfg/models/v8/test2_rtdetr.yaml
+++ b/ultralytics/cfg/models/v8/test2_rtdetr.yaml
@@ -20,13 +20,13 @@ backbone:
   # [from, repeats, module, args]
   - [-1, 1, Conv, [64, 3, 2]] # 0-P1/2
   - [-1, 1, Conv, [128, 3, 2]] # 1-P2/4
-  - [-1, 3, C2fGhost, [128, True]]
+  - [-1, 3, C3k2Ghost, [128, True, True]]
   - [-1, 1, Conv, [256, 3, 2]] # 3-P3/8
-  - [-1, 6, C2fGhost, [256, True]]
+  - [-1, 6, C3k2Ghost, [256, True, True]]
   - [-1, 1, Conv, [512, 3, 2]] # 5-P4/16
-  - [-1, 6, C2fGhost, [512, True]]
+  - [-1, 6, C3k2Ghost, [512, True, True]]
   - [-1, 1, Conv, [1024, 3, 2]] # 7-P5/32
-  - [-1, 3, C2fGhost, [1024, True]]
+  - [-1, 3, C3k2Ghost, [1024, True, True]]
   - [-1, 1, SPPF, [1024, 5]] # 9
 
 # YOLOv8.0n head
