--- a/ultralytics/cfg/models/v8/test2_rtdetr.yaml
+++ b/ultralytics/cfg/models/v8/test2_rtdetr.yaml
@@ -1,50 +1,113 @@
-
-# Ultralytics 🚀 AGPL-3.0 License - https://ultralytics.com/license
-
-# Ultralytics YOLOv8 object detection model with P3/8 - P5/32 outputs
-# Model docs: https://docs.ultralytics.com/models/yolov8
-# Task docs: https://docs.ultralytics.com/tasks/detect
-
-# Parameters
-nc: 80 # number of classes
-scales: # model compound scaling constants, i.e. 'model=yolov8n.yaml' will call yolov8.yaml with scale 'n'
-  # [depth, width, max_channels]
-  n: [0.33, 0.25, 1024] # YOLOv8n summary: 225 layers,  3157200 parameters,  3157184 gradients,   8.9 GFLOPs
-  s: [0.33, 0.50, 1024] # YOLOv8s summary: 225 layers, 11166560 parameters, 11166544 gradients,  28.8 GFLOPs
-  m: [0.67, 0.75, 768] # YOLOv8m summary: 295 layers, 25902640 parameters, 25902624 gradients,  79.3 GFLOPs
-  l: [1.00, 1.00, 512] # YOLOv8l summary: 365 layers, 43691520 parameters, 43691504 gradients, 165.7 GFLOPs
-  x: [1.00, 1.25, 512] # YOLOv8x summary: 365 layers, 68229648 parameters, 68229632 gradients, 258.5 GFLOPs
-
-# YOLOv8.0n backbone
+nc: 2
+scales:
+  s: [1.0, 1.0, 1536]
 backbone:
-  # [from, repeats, module, args]
-  - [-1, 1, Conv, [64, 3, 2]] # 0-P1/2
-  - [-1, 1, Conv, [128, 3, 2]] # 1-P2/4
-  - [-1, 3, DWC3k2, [128, True]]
-  - [-1, 1, Conv, [256, 3, 2]] # 3-P3/8
-  - [-1, 6, DWC3k2, [256, True]]
-  - [-1, 1, Conv, [512, 3, 2]] # 5-P4/16
-  - [-1, 6, DWC3k2, [512, True]]
-  - [-1, 1, Conv, [1024, 3, 2]] # 7-P5/32
-  - [-1, 3, DWC3k2, [1024, True]]
-  - [-1, 1, SPPF, [1024, 5]] # 9
+  - [-1, 1, nn.Identity, []] #0
 
-# YOLOv8.0n head
+  #CNN
+  - [0, 1, TorchVision, [768, "convnext_tiny", "DEFAULT", True, 2, True]]  # - 1
+  - [-1, 1, Index, [192, 4]]  #  (1, 192, 80, 80) - 2
+  - [1, 1, Index, [384, 6]]  # (1, 384, 40, 40) - 3
+  - [1, 1, Index, [768, 8]]  #  (1, 768, 20, 20) - 4
+  
+  # Swin track
+  - [0, 1, TorchVision, [768, swin_t, DEFAULT, True, 4, True]] #5
+  - [-1, 1, Index, [192 ,4]] #6
+  - [-1, 1, torchvision.ops.Permute, [[0, 3, 1, 2]]] #7 (1, 192, 80, 80)
+  - [5, 1, Index, [384, 6]] #8
+  - [-1, 1, torchvision.ops.Permute, [[0, 3, 1, 2]]] #9 (1, 384, 40, 40)
+  - [5, 1, Index, [768, 9]] #10
+  - [-1, 1, torchvision.ops.Permute, [[0, 3, 1, 2]]] #11 (1, 768, 20, 20)
+
+  #concat
+  - [[2, 7], 1, Concat, [1]] # 12 (1, 384, 80, 80)
+  - [-1, 1, EMA, [384]] # 13 (1, 384, 80, 80)
+  - [-1, 1, DepthwiseConvBlock, [256, 3, 1]] #14 (1, 256, 80, 80) C - make channels same
+  
+  - [[3, 9], 1, Concat, [1]] # 15 (1, 768, 40, 40)
+  - [-1, 1, EMA, [768]] # 16 (1, 768, 40, 40)
+  - [-1, 1, DepthwiseConvBlock, [256, 3, 1]] #17 (1, 256, 40, 40) B - make channels same
+  
+  - [[4, 11], 1, Concat, [1]] # 18 (1, 1536, 20, 20)
+  - [-1, 1, EMA, [1536]] # 19 (1, 1536, 20, 20)
+  - [-1, 1, DepthwiseConvBlock, [256, 3, 1]] # 20 (1, 256, 20, 20) A - make channels same
+
 head:
-  - [-1, 1, nn.Upsample, [None, 2, "nearest"]]
-  - [[-1, 6], 1, Concat, [1]] # cat backbone P4
-  - [-1, 3, DWC3k2, [512]] # 12
+############################################################################################BLOCK 1
+  - [-1, 1, nn.Upsample, [None, 2, "nearest"]] #21 Upsample A -> (1, 256, 40, 40)
+  - [[17, -1], 1, BiFPN_Concat2, [1]] #22 AB (1, 256, 40, 40)
+  - [-1, 1, DepthwiseConvBlock, [256, 3, 1]] #23 (1, 256, 40, 40)
 
-  - [-1, 1, nn.Upsample, [None, 2, "nearest"]]
-  - [[-1, 4], 1, Concat, [1]] # cat backbone P3
-  - [-1, 3, DWC3k2, [256]] # 15 (P3/8-small)
+  - [-1, 1, nn.Upsample, [None, 2, "nearest"]] #24 Upsample -> (1, 256, 80, 80)
+  - [[-1, 14], 1, BiFPN_Concat2, [1]] #25 ABC = R (1, 256, 80, 80)
+  - [-1, 1, DepthwiseConvBlock, [256, 3, 1]] #26 (1, 256, 80, 80)
 
-  - [-1, 1, DepthwiseConvBlock, [256, 3, 2]]
-  - [[-1, 12], 1, Concat, [1]] # cat head P4
-  - [-1, 3, DWC3k2, [512, True]] # 18 (P4/16-medium)
+  - [-1, 1, DWConv, [256, 3, 2]] #27 (1, 256, 40, 40)
+  - [[-1, 23, 17],1, BiFPN_Concat3, [1]] #28 ABC + AB + B = Q (1, 256, 40, 40)
+  - [-1, 1, DepthwiseConvBlock, [256, 3, 1]] #29 (1, 256, 40, 40)
 
-  - [-1, 1, DepthwiseConvBlock, [512, 3, 2]]
-  - [[-1, 9], 1, Concat, [1]] # cat head P5
-  - [-1, 3, DWC3k2, [1024, True]] # 21 (P5/32-large)
+  - [-1, 1, DWConv, [256, 3, 2]] #30 (1, 256, 20, 20)
+  - [[-1, 20], 1, BiFPN_Concat2, [1]] #31 ABC + AB + B + A = P (1, 256, 20, 20)
+  - [-1, 1, DepthwiseConvBlock, [256, 3, 1]] #32 (1, 256, 20, 20)
+##########################################################################################BLOCK2
+  - [-1, 1, nn.Upsample, [None, 2, "nearest"]] #33 (1, 256, 40, 40) 
+  - [[-1, 29], 1, BiFPN_Concat2, [1]] #34 PQ (1, 256, 40, 40)
+  - [-1, 1, DepthwiseConvBlock, [256, 3, 1]] #35 (1, 256, 40, 40)
 
-  - [[15, 18, 21], 1, Detect, [nc]] # Detect(P3, P4, P5)
+  - [-1, 1, nn.Upsample, [None, 2, "nearest"]] #36 (1, 256, 80, 80)
+  - [[-1, 26], 1, BiFPN_Concat2, [1]] #37 PQR = Z (1, 256, 80, 80)
+  - [-1, 1, DepthwiseConvBlock, [256, 3, 1]] #38 (1, 256, 80, 80)
+
+  - [-1, 1, DWConv, [256, 3, 2]] #39 (1, 256, 40, 40)
+  - [[-1, 35, 29], 1, BiFPN_Concat3, [1]] #40 PQR + PQ + Q = Y (1, 256, 40, 40)
+  - [-1, 1, DepthwiseConvBlock, [256, 3, 1]] #41 (1, 256, 40, 40)
+
+  - [-1, 1, DWConv, [256, 3, 2]] #42 (1, 256, 20, 20)
+  - [[-1, 32], 1, BiFPN_Concat2, [1]] #43 PQR + PQ + Q + P = X (1, 256, 20, 20)
+  - [-1, 1, DepthwiseConvBlock, [256, 3, 1]] #44 (1, 256, 20, 20)
+##########################################################################################BLOCK3
+  - [-1, 1, nn.Upsample, [None, 2, "nearest"]] # 45 (1, 256, 40, 40)
+  - [[-1, 41], 1, BiFPN_Concat2, [1]] # 46 XY (1, 256, 40, 40)
+  - [-1, 1, DepthwiseConvBlock, [256, 3, 1]] #47 (1, 256, 40, 40)
+
+  - [-1, 1, nn.Upsample, [None, 2, "nearest"]] #48 (1, 256, 80, 80)
+  - [[-1, 38], 1, BiFPN_Concat2, [1]] #49 XYZ (1, 256, 80 80)
+  - [-1, 1, DepthwiseConvBlock, [256, 3, 1]] #50 (1, 256, 80, 80)
+
+  - [-1, 1, DWConv, [256, 3, 2]] #51 (1, 256, 40, 40)
+  - [[-1, 47, 41], 1, BiFPN_Concat3, [1]] #52 XYZ + XY + Y (1, 256, 40, 40)
+  - [-1, 1, DepthwiseConvBlock, [256, 3, 1]] # 53 (1, 256, 40, 40)
+
+  - [-1, 1, DWConv, [256, 3, 2]] #54 (1, 256, 20, 20)
+  - [[-1, 44], 1, BiFPN_Concat2, [1]] # 55 XYZ + XY + Y + X
+  - [-1, 1, DepthwiseConvBlock, [256, 3, 1]] #56
+
+  # - [53, 1, C3k2, [512, True]] #57
+  # - [56, 1, C3k2, [1024, True]] #58
+
+  - [[50,53,56], 1, RTDETRDecoder, [nc]]  # Pass P3, P4, P5 to Detect head (index 32) 25
+  # - [[50,57,58], 1, RTDETRDecoder, [nc]]  # Pass P3, P4, P5 to Detect head (index 32) 25
+  
+
+# head:
+# # Top-Down Pathway
+#   - [19, 1, nn.Upsample, [None, 2, "nearest"]]  # Upsample EMA3 to match Scale 2 (index 20) 
+#   - [[-1, 17], 1, Concat, [1]]                 # Concatenate EMA3 (upsampled) + EMA2 (index 21) 
+#   - [-1, 1, C3k2, [512, False]]                # Apply C3k2 on concatenated features (index 22) 
+
+#   - [22, 1, nn.Upsample, [None, 2, "nearest"]]  # Upsample to match Scale 1 (index 23) 
+#   - [[-1, 15], 1, Concat, [1]]                 # Concatenate with EMA1 (index 24) 
+#   - [-1, 1, C3k2, [256, False]]                # Apply C3k2 on concatenated features (index 25) 
+
+#   # Bottom-Up Pathway
+#   - [25, 1, DWConv, [256, 3, 2]]    # Downsample Scale 1 (index 26) 24
+#   - [[-1, 22], 1, Concat, [1]]    # Concatenate (Scale 1 -> Scale 2) (index 27) 25
+#   - [-1, 1, C3k2, [512, False]]   # Apply C3k2 (index 28) 26
+
+#   - [28, 1, DWConv, [512, 3, 2]]    # Downsample Scale 2 (index 29) 27
+#   - [[-1, 19], 1, Concat, [1]]    # Concatenate with EMA3 (Scale 3) (index 30) 28
+#   - [-1, 1, C3k2, [1024, False]]  # Apply C3k2 (index 31) 29
+
+#   # Detection
+#   # - [[23, 26, 29], 1, Detect, [nc]]  # Pass P3, P4, P5 to Detect head (index 32) 30
+#   - [[25, 28, 31], 1, RTDETRDecoder, [nc]]  # Pass P3, P4, P5 to Detect head (index 32) 30
