--- a/ultralytics/cfg/models/v8/test2_rtdetr.yaml
+++ b/ultralytics/cfg/models/v8/test2_rtdetr.yaml
@@ -37,62 +37,62 @@ head:
   - [-1, 1, nn.Upsample, [None, 2, "nearest"]] #21 Upsample A -> (1, 256, 40, 40)
   - [[17, -1], 1, BiFPN_Concat2, [1]] #22 AB (1, 256, 40, 40)
   # - [-1, 1, DepthwiseConvBlock, [384, 3, 1]] #23 (1, 256, 40, 40)
-  - [-1, 1, C3k2, [384, False]] #23 (1, 256, 40, 40)
+  - [-1, 1, DWC3k2, [384, False]] #23 (1, 256, 40, 40)
 
   - [-1, 1, nn.Upsample, [None, 2, "nearest"]] #24 Upsample -> (1, 256, 80, 80)
   - [[-1, 14], 1, BiFPN_Concat2, [1]] #25 ABC = R (1, 256, 80, 80)
   # - [-1, 1, DepthwiseConvBlock, [384, 3, 1]] #26 (1, 256, 80, 80)
-  - [-1, 1, C3k2, [384, False]]
+  - [-1, 1, DWC3k2, [384, False]]
 
   - [-1, 1, nn.Upsample, [None, 0.5, "nearest"]] #27 (1, 256, 40, 40)
   - [[-1, 23, 17],1, BiFPN_Concat3, [1]] #28 ABC + AB + B = Q (1, 256, 40, 40)
   # - [-1, 1, DepthwiseConvBlock, [384, 3, 1]] #29 (1, 256, 40, 40)
-  - [-1, 1, C3k2, [384, False]]
+  - [-1, 1, DWC3k2, [384, False]]
 
   - [-1, 1, nn.Upsample, [None, 0.5, "nearest"]] #30 (1, 256, 20, 20)
   - [[-1, 20], 1, BiFPN_Concat2, [1]] #31 ABC + AB + B + A = P (1, 256, 20, 20)
   # - [-1, 1, DepthwiseConvBlock, [384, 3, 1]] #32 (1, 256, 20, 20)
-  - [-1, 1, C3k2, [384, False]]
+  - [-1, 1, DWC3k2, [384, False]]
 ##########################################################################################BLOCK2
   - [-1, 1, nn.Upsample, [None, 2, "nearest"]] #33 (1, 256, 40, 40) 
   - [[-1, 29], 1, BiFPN_Concat2, [1]] #34 PQ (1, 256, 40, 40)
   # - [-1, 1, DepthwiseConvBlock, [384, 3, 1]] #35 (1, 256, 40, 40)
-  - [-1, 1, C3k2, [384, False]]
+  - [-1, 1, DWC3k2, [384, False]]
 
   - [-1, 1, nn.Upsample, [None, 2, "nearest"]] #36 (1, 256, 80, 80)
   - [[-1, 26], 1, BiFPN_Concat2, [1]] #37 PQR = Z (1, 256, 80, 80)
   # - [-1, 1, DepthwiseConvBlock, [384, 3, 1]] #38 (1, 256, 80, 80)
-  - [-1, 1, C3k2, [384, False]]
+  - [-1, 1, DWC3k2, [384, False]]
 
   - [-1, 1, nn.Upsample, [None, 0.5, "nearest"]] #39 (1, 256, 40, 40)
   - [[-1, 35, 29], 1, BiFPN_Concat3, [1]] #40 PQR + PQ + Q = Y (1, 256, 40, 40)
   # - [-1, 1, DepthwiseConvBlock, [384, 3, 1]] #41 (1, 256, 40, 40)
-  - [-1, 1, C3k2, [384, False]]
+  - [-1, 1, DWC3k2, [384, False]]
 
   - [-1, 1, nn.Upsample, [None, 0.5, "nearest"]] #42 (1, 256, 20, 20)
   - [[-1, 32], 1, BiFPN_Concat2, [1]] #43 PQR + PQ + Q + P = X (1, 256, 20, 20)
   # - [-1, 1, DepthwiseConvBlock, [384, 3, 1]] #44 (1, 256, 20, 20)
-  - [-1, 1, C3k2, [384, False]]
+  - [-1, 1, DWC3k2, [384, False]]
 ##########################################################################################BLOCK3
   - [-1, 1, nn.Upsample, [None, 2, "nearest"]] # 45 (1, 256, 40, 40)
   - [[-1, 41], 1, BiFPN_Concat2, [1]] # 46 XY (1, 256, 40, 40)
   # - [-1, 1, DepthwiseConvBlock, [384, 3, 1]] #47 (1, 256, 40, 40)
-  - [-1, 1, C3k2, [384, False]]
+  - [-1, 1, DWC3k2, [384, False]]
 
   - [-1, 1, nn.Upsample, [None, 2, "nearest"]] #48 (1, 256, 80, 80)
   - [[-1, 38], 1, BiFPN_Concat2, [1]] #49 XYZ (1, 256, 80 80)
   # - [-1, 1, DepthwiseConvBlock, [384, 3, 1]] #50 (1, 256, 80, 80)
-  - [-1, 1, C3k2, [384, False]]
+  - [-1, 1, DWC3k2, [384, False]]
 
   - [-1, 1, nn.Upsample, [None, 0.5, "nearest"]] #51 (1, 256, 40, 40)
   - [[-1, 47, 41], 1, BiFPN_Concat3, [1]] #52 XYZ + XY + Y (1, 256, 40, 40)
   # - [-1, 1, DepthwiseConvBlock, [384, 3, 1]] # 53 (1, 256, 40, 40)
-  - [-1, 1, C3k2, [384, False]]
+  - [-1, 1, DWC3k2, [384, False]]
 
   - [-1, 1, nn.Upsample, [None, 0.5, "nearest"]] #54 (1, 256, 20, 20)
   - [[-1, 44], 1, BiFPN_Concat2, [1]] # 55 XYZ + XY + Y + X
   # - [-1, 1, DepthwiseConvBlock, [384, 3, 1]] #56
-  - [-1, 1, C3k2, [384, False]]
+  - [-1, 1, DWC3k2, [384, False]]
 
   # - [53, 1, C3k2, [512, True]] #57
   # - [56, 1, C3k2, [1024, True]] #58
