--- a/ultralytics/cfg/models/v8/test2_rtdetr.yaml
+++ b/ultralytics/cfg/models/v8/test2_rtdetr.yaml
@@ -11,7 +11,7 @@ backbone:
   - [1, 1, Index, [768, 8]]  #  (1, 768, 20, 20) - 4
   
   # Swin track
-  - [0, 1, TorchVision, [768, swin_v2_t, DEFAULT, True, 4, True]] #5
+  - [0, 1, TorchVision, [768, swin_t, DEFAULT, True, 4, True]] #5
   - [-1, 1, Index, [192 ,4]] #6
   - [-1, 1, torchvision.ops.Permute, [[0, 3, 1, 2]]] #7 (1, 192, 80, 80)
   - [5, 1, Index, [384, 6]] #8
@@ -27,86 +27,78 @@ backbone:
   - [[3, 9], 1, Concat, [1]] # 15 (1, 768, 40, 40)
   - [-1, 1, EMA, [768]] # 16 (1, 768, 40, 40)
   - [-1, 1, DepthwiseConvBlock, [384, 3, 1]] #17 (1, 256, 40, 40) B - make channels same
-  # - [-1, 1, DWC3k2, [256, False]] #17
   
   - [[4, 11], 1, Concat, [1]] # 18 (1, 1536, 20, 20)
   - [-1, 1, EMA, [1536]] # 19 (1, 1536, 20, 20)
   - [-1, 1, DepthwiseConvBlock, [384, 3, 1]] # 20 (1, 256, 20, 20) A - make channels same
-  # - [-1, 1, DWC3k2, [256, False]] #20
 
 head:
 ############################################################################################BLOCK 1
   - [-1, 1, nn.Upsample, [None, 2, "nearest"]] #21 Upsample A -> (1, 256, 40, 40)
   - [[17, -1], 1, BiFPN_Concat2, [1]] #22 AB (1, 256, 40, 40)
-  - [-1, 1, DepthwiseConvBlock, [384, 3, 1]] #23 (1, 256, 40, 40)
-  - [-1, 1, DepthwiseConvBlock, [384, 3, 1]] #24 (1, 256, 40, 40)
-  # - [-1, 1, DWC3k2, [256, False]] #23 (1, 256, 40, 40)
+  # - [-1, 1, DepthwiseConvBlock, [384, 3, 1]] #23 (1, 256, 40, 40)
+  - [-1, 2, DWC3k2, [384, False]] #23 (1, 256, 40, 40)
+  
 
-  - [-1, 1, nn.Upsample, [None, 2, "nearest"]] #25 Upsample -> (1, 256, 80, 80)
-  - [[-1, 14], 1, BiFPN_Concat2, [1]] #26 ABC = R (1, 256, 80, 80)
-  - [-1, 1, DepthwiseConvBlock, [384, 3, 1]] #27 (1, 256, 80, 80)
-  - [-1, 1, DepthwiseConvBlock, [384, 3, 1]] #28 (1, 256, 80, 80)
-  # - [-1, 1, DWC3k2, [256, False]]
+  - [-1, 1, nn.Upsample, [None, 2, "nearest"]] #24 Upsample -> (1, 256, 80, 80)
+  - [[-1, 14], 1, BiFPN_Concat2, [1]] #25 ABC = R (1, 256, 80, 80)
+  # - [-1, 1, DepthwiseConvBlock, [384, 3, 1]] #26 (1, 256, 80, 80)
+  - [-1, 2, DWC3k2, [384, False]]
 
-  - [-1, 1, nn.Upsample, [None, 0.5, "nearest"]] #29 (1, 256, 40, 40)
-  - [[-1, 24, 17],1, BiFPN_Concat3, [1]] #30 ABC + AB + B = Q (1, 256, 40, 40)
-  - [-1, 1, DepthwiseConvBlock, [384, 3, 1]] #31 (1, 256, 40, 40)
-  - [-1, 1, DepthwiseConvBlock, [384, 3, 1]] #32 (1, 256, 40, 40)
+  - [-1, 1, DWConv, [384, 3, 2]] #27 (1, 256, 40, 40)
+  - [[-1, 23, 17],1, BiFPN_Concat3, [1]] #28 ABC + AB + B = Q (1, 256, 40, 40)
+  # - [-1, 1, DepthwiseConvBlock, [384, 3, 1]] #29 (1, 256, 40, 40)
+  - [-1, 2, DWC3k2, [384, False]]
 
-  - [-1, 1, nn.Upsample, [None, 0.5, "nearest"]] #33 (1, 256, 20, 20)
-  - [[-1, 20], 1, BiFPN_Concat2, [1]] #34 ABC + AB + B + A = P (1, 256, 20, 20)
-  - [-1, 1, DepthwiseConvBlock, [384, 3, 1]] #35 (1, 256, 20, 20)
-  - [-1, 1, DepthwiseConvBlock, [384, 3, 1]] #36 (1, 256, 20, 20)
+  - [-1, 1, DWConv, [384, 3, 2]] #30 (1, 256, 20, 20)
+  - [[-1, 20], 1, BiFPN_Concat2, [1]] #31 ABC + AB + B + A = P (1, 256, 20, 20)
+  # - [-1, 1, DepthwiseConvBlock, [384, 3, 1]] #32 (1, 256, 20, 20)
+  - [-1, 2, DWC3k2, [384, True]]
 ##########################################################################################BLOCK2
-  - [-1, 1, nn.Upsample, [None, 2, "nearest"]] #37 (1, 256, 40, 40) 
-  - [[-1, 32], 1, BiFPN_Concat2, [1]] #38 PQ (1, 256, 40, 40)
-  - [-1, 1, DepthwiseConvBlock, [384, 3, 1]] #39 (1, 256, 40, 40)
-  - [-1, 1, DepthwiseConvBlock, [384, 3, 1]] #40 (1, 256, 40, 40)
-  # - [-1, 3, DWC3k2, [256, False]]
+  - [-1, 1, nn.Upsample, [None, 2, "nearest"]] #33 (1, 256, 40, 40) 
+  - [[-1, 29], 1, BiFPN_Concat2, [1]] #34 PQ (1, 256, 40, 40)
+  # - [-1, 1, DepthwiseConvBlock, [384, 3, 1]] #35 (1, 256, 40, 40)
+  - [-1, 2, DWC3k2, [384, False]]
 
-  - [-1, 1, nn.Upsample, [None, 2, "nearest"]] #41 (1, 256, 80, 80)
-  - [[-1, 28], 1, BiFPN_Concat2, [1]] #42 PQR = Z (1, 256, 80, 80)
-  - [-1, 1, DepthwiseConvBlock, [384, 3, 1]] #43 (1, 256, 80, 80)
-  - [-1, 1, DepthwiseConvBlock, [384, 3, 1]] #44 (1, 256, 80, 80)
-  # - [-1, 3, DWC3k2, [256, False]]
+  - [-1, 1, nn.Upsample, [None, 2, "nearest"]] #36 (1, 256, 80, 80)
+  - [[-1, 26], 1, BiFPN_Concat2, [1]] #37 PQR = Z (1, 256, 80, 80)
+  # - [-1, 1, DepthwiseConvBlock, [384, 3, 1]] #38 (1, 256, 80, 80)
+  - [-1, 2, DWC3k2, [384, False]]
 
-  - [-1, 1, nn.Upsample, [None, 0.5, "nearest"]] #45 (1, 256, 40, 40)
-  - [[-1, 40, 32], 1, BiFPN_Concat3, [1]] #46 PQR + PQ + Q = Y (1, 256, 40, 40)
-  - [-1, 1, DepthwiseConvBlock, [384, 3, 1]] #47 (1, 256, 40, 40)
-  - [-1, 1, DepthwiseConvBlock, [384, 3, 1]] #48 (1, 256, 40, 40)
+  - [-1, 1, DWConv, [384, 3, 2]] #39 (1, 256, 40, 40)
+  - [[-1, 35, 29], 1, BiFPN_Concat3, [1]] #40 PQR + PQ + Q = Y (1, 256, 40, 40)
+  # - [-1, 1, DepthwiseConvBlock, [384, 3, 1]] #41 (1, 256, 40, 40)
+  - [-1, 2, DWC3k2, [384, False]]
 
-  - [-1, 1, nn.Upsample, [None, 0.5, "nearest"]] #49 (1, 256, 20, 20)
-  - [[-1, 36], 1, BiFPN_Concat2, [1]] #50 PQR + PQ + Q + P = X (1, 256, 20, 20)
-  - [-1, 1, DepthwiseConvBlock, [384, 3, 1]] #51 (1, 256, 20, 20)
-  - [-1, 1, DepthwiseConvBlock, [384, 3, 1]] #52 (1, 256, 20, 20)
+  - [-1, 1, DWConv, [384, 3, 2]] #42 (1, 256, 20, 20)
+  - [[-1, 32], 1, BiFPN_Concat2, [1]] #43 PQR + PQ + Q + P = X (1, 256, 20, 20)
+  # - [-1, 1, DepthwiseConvBlock, [384, 3, 1]] #44 (1, 256, 20, 20)
+  - [-1, 2, DWC3k2, [384, True]]
 ##########################################################################################BLOCK3
-  - [-1, 1, nn.Upsample, [None, 2, "nearest"]] # 53 (1, 256, 40, 40)
-  - [[-1, 48], 1, BiFPN_Concat2, [1]] # 54 XY (1, 256, 40, 40)
-  - [-1, 1, DepthwiseConvBlock, [384, 3, 1]] #55 (1, 256, 40, 40)
-  - [-1, 1, DepthwiseConvBlock, [384, 3, 1]] #56 (1, 256, 40, 40)
-  # - [-1, 3, DWC3k2, [256, False]]
+  - [-1, 1, nn.Upsample, [None, 2, "nearest"]] # 45 (1, 256, 40, 40)
+  - [[-1, 41], 1, BiFPN_Concat2, [1]] # 46 XY (1, 256, 40, 40)
+  # - [-1, 1, DepthwiseConvBlock, [384, 3, 1]] #47 (1, 256, 40, 40)
+  - [-1, 2, DWC3k2, [384, False]]
 
-  - [-1, 1, nn.Upsample, [None, 2, "nearest"]] #57 (1, 256, 80, 80)
-  - [[-1, 44], 1, BiFPN_Concat2, [1]] #58 XYZ (1, 256, 80 80)
-  - [-1, 1, DepthwiseConvBlock, [384, 3, 1]] #59 (1, 256, 80, 80)
-  - [-1, 1, DepthwiseConvBlock, [384, 3, 1]] #60 (1, 256, 80, 80)
-  # - [-1, 3, DWC3k2, [256, False]]
+  - [-1, 1, nn.Upsample, [None, 2, "nearest"]] #48 (1, 256, 80, 80)
+  - [[-1, 38], 1, BiFPN_Concat2, [1]] #49 XYZ (1, 256, 80 80)
+  # - [-1, 1, DepthwiseConvBlock, [384, 3, 1]] #50 (1, 256, 80, 80)
+  - [-1, 2, DWC3k2, [384, False]]
 
-  - [-1, 1, nn.Upsample, [None, 0.5, "nearest"]] #61 (1, 256, 40, 40)
-  - [[-1, 56, 48], 1, BiFPN_Concat3, [1]] #62 XYZ + XY + Y (1, 256, 40, 40)
-  - [-1, 1, DepthwiseConvBlock, [384, 3, 1]] # 63 (1, 256, 40, 40)
-  - [-1, 1, DepthwiseConvBlock, [384, 3, 1]] # 64 (1, 256, 40, 40)
+  - [-1, 1, DWConv, [384, 3, 2]] #51 (1, 256, 40, 40)
+  - [[-1, 47, 41], 1, BiFPN_Concat3, [1]] #52 XYZ + XY + Y (1, 256, 40, 40)
+  # - [-1, 1, DepthwiseConvBlock, [384, 3, 1]] # 53 (1, 256, 40, 40)
+  - [-1, 2, DWC3k2, [384, False]]
 
-  - [-1, 1, nn.Upsample, [None, 0.5, "nearest"]] #65 (1, 256, 20, 20)
-  - [[-1, 52], 1, BiFPN_Concat2, [1]] # 66 XYZ + XY + Y + X
-  - [-1, 1, DepthwiseConvBlock, [384, 3, 1]] #67
-  - [-1, 1, DepthwiseConvBlock, [384, 3, 1]] #68
+  - [-1, 1, DWConv, [384, 3, 2]] #54 (1, 256, 20, 20)
+  - [[-1, 44], 1, BiFPN_Concat2, [1]] # 55 XYZ + XY + Y + X
+  # - [-1, 1, DepthwiseConvBlock, [384, 3, 1]] #56
+  - [-1, 2, DWC3k2, [512, True]]
 
   # - [53, 1, C3k2, [512, True]] #57
   # - [56, 1, C3k2, [1024, True]] #58
 
-  # - [[50,53,56], 1, RTDETRDecoder, [nc]]  # Pass P3, P4, P5 to Detect head (index 32) 25
-  - [[60,64,68], 1, RTDETRDecoder, [nc]]  # Pass P3, P4, P5 to Detect head (index 32) 25
+  - [[50,53,56], 1, RTDETRDecoder, [nc]]  # Pass P3, P4, P5 to Detect head (index 32) 25
   # - [[50,57,58], 1, RTDETRDecoder, [nc]]  # Pass P3, P4, P5 to Detect head (index 32) 25
   
 
